[package]
name = "dtg-credentials"
description = "Decentralized Trust Graph (DTG) Credentials Library"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Glenn Gore <glenn@affinidi.com>"]
rust-version = "1.90.0"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/FirstPersonNetwork/tdg-credentials-rs"

[features]
default = ["affinidi-signing"]
affinidi-signing = ["dep:affinidi-secrets-resolver"]

[dependencies]
affinidi-data-integrity = "0.3"
affinidi-secrets-resolver = { version = "0.5", optional = true }

chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
affinidi-tdk = "0.4"
anyhow = "1.0"
tokio = "1.49"
